prevent code chunks from wrapping...

--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@
 
 pre code {
   font-size: .7rem;
+  white-space: pre;
 }
 
 code { 
